NXP-30206: refine filtering on save